[package]
name = "rocket-accept-language"
version = "0.7.1"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2018"
repository = "https://github.com/magiclen/rocket-accept-language"
homepage = "https://magiclen.org/rocket-accept-language"
keywords = ["rocket", "server", "web", "i18n", "http"]
categories = ["parser-implementations", "localization", "web-programming"]
description= "This crate provides a request guard used for getting `accept-language` header."
readme = "README.md"
license = "MIT"
include = ["src/**/*", "Cargo.toml"]

[badges.travis-ci]
repository = "magiclen/rocket-accept-language"
branch = "master"

[dependencies]
rocket = "0.4.2"
accept-language = "2"
unic-langid = { version = "0.9", features = ["macros"] }
unic-langid-macros = "0.9"
tinystr = "0.3"